Corrected the sizes

--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="207dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
@@ -17,21 +17,22 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="269dp"
-        android:layout_height="65dp"
+        android:layout_width="427dp"
+        android:layout_height="56dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="13dp"
         android:layout_toEndOf="@+id/imageView"
         android:textSize="24sp"
         tools:text="SpiderMan " />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="268dp"
-        android:layout_height="61dp"
+        android:layout_width="425dp"
+        android:layout_height="112dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="83dp"
         android:layout_toEndOf="@+id/imageView"
         tools:text="Test text this should not matter" />
 </RelativeLayout>
